# openscop

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Jenkinsfile  Makefile.am  README  README.md  autogen.sh  configure.ac  configure.in  redo.sh
cmake/: osl-config.cmake  osl1-config.cmake  osl_gmp-config.cmake
doc/: Doxyfile.in  Makefile.am  clan.texi  openscop.texi
include/: Doxyfile  Makefile.am
include/openscop/: arrays.h  body.h  comment.h  extension.h  extension_id.h  generic.h  int.h  interface.h  irregular.h  lines.h  macros.h  matrix.h  names.h  openscop.h  relation.h  relation_list.h  scop.h.in  scop_list.h  statement.h  strings.h  util.h  vector.h
include/openscop/extensions/: arrays.h  comment.h  irregular.h  lines.h  textual.h
include/osl/: attributes.h  body.h  generic.h  int.h  interface.h  macros.h  names.h  osl.h  relation.h  relation_list.h  scop.h.in  statement.h  strings.h  util.h  vector.h
include/osl/extensions/: annotation.h  arrays.h  clay.h  cloogoptions.h  comment.h  coordinates.h  dependence.h  extbody.h  identifier.h  irregular.h  lines.h  loop.h  null.h  pluto_unroll.h  region.h  scatinfos.h  scatnames.h  symbols.h  textual.h
include/osl1/: beta.h  beta_functions.h  convex_relation.h  convex_relation_ptr.h  dimension_type.h  dimensions.h  equation.h  extension.h  id.h  input.h  osl_to_osl1.h  print.h  print_polylib.h  relation.h  scop.h  statement.h
include/osl1/extension/: body.h  comments.h  coordinates.h  extension.h  scatnames.h  unknown.h
include/osl1/implementation/: convex_relation.h  convex_relation_ptr.h  dimension_type.h  extension.h  osl_to_osl1.h  relation.h  scop.h  statement.h
include/osl1/implementation/extension/: body.h  comments.h  coordinates.h  scatnames.h  unknown.h
include/osl1/implementation/print/: convex_relation.h  relation.h  relation_polylib.h  scop.h  statement.h
include/osl1/implementation/vector/: dimension_type.h  relation.h  statement.h
include/osl1/print/: convex_relation.h  relation.h  relation_polylib.h  scop.h  statement.h
include/osl1/vector/: beta.h  convex_relation_ptr.h  dimension_type.h  relation.h  scop.h  statement.h
include/scoplib/: relation.h
source/: Makefile.am  body.c  extension.c  extension.c.in  extension.sh  extension_id.c  generic.c  int.c  interface.c  matrix.c  names.c  relation.c  relation_list.c  scop.c  scop_list.c  statement.c  strings.c  util.c  vector.c
source/extensions/: CMakeLists.txt  annotation.c  arrays.c  clay.c  cloogoptions.c  comment.c  coordinates.c  dependence.c  extbody.c  identifier.c  irregular.c  lines.c  loop.c  null.c  pluto_unroll.c  region.c  scatinfos.c  scatnames.c  symbols.c  textual.c
src/osl1/: beta.c  beta_functions.c  convex_relation.c  convex_relation_ptr.c  dimension_type.c  dimensions.c  equation.c  extension.c  id.c  input.c  osl_to_osl1.c  print.c  print_polylib.c  relation.c  scop.c  statement.c
src/osl1/extension/: body.c  comments.c  scatnames.c  unknown.c
src/osl1/vector/: relation.c  scop.c  statement.c
tests/: Makefile.am  openscop_test.c  osl_identifier.c  osl_int.c  osl_pluto_unroll.c  osl_relation_set_precision.c  osl_test.c  polynom.scop  test_empty_statement.scop  test_identifier.scop  test_just_access.scop  test_just_body.scop  test_just_cloogoptions.scop  test_just_domain.scop  test_just_loop.scop  test_just_read.scop  test_just_scattering.scop  test_just_write.scop  test_matmult.scop  test_matmult_matrix.scop  test_matmult_relation.scop  test_no_statement.scop  test_no_write.scop  test_scatinfos.scop  test_symbols2.scop
tests/osl1/: beta.c  convex_relation.c  convex_relation_ptr.c  extension.c  input.c  read_scop.c  relation.c  scop.c  statement.c  vector_convex_relation_ptr.c  vector_relation.c  vector_scop.c  vector_statement.c
tests/osl1_scop/: matmul.scop
